temp fix to load the site on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,37 @@ header, main, footer {
     text-decoration: none;
 }
 
+@media only screen and (max-width: 600px) {
+    #main-logo-caption {
+        font-size: 1.5rem;
+    }
+
+    .nav-menu-tiles {
+        margin: 0;
+        padding: 0;
+        visibility: hidden;
+    }
+
+    #sidebar {
+        visibility: hidden;
+    }
+
+    article {
+        position: relative;
+        right: 150px;
+        padding: 0;
+        margin-left: -50px;
+        margin-right: -130px;
+        margin-top: -100px;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    #main-logo-caption {
+        font-size: 1rem;
+    }
+}
+
 #main-logo-link {
     text-decoration: none;
 }
